--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="content">
         <section class="descricao">
             <h2>Maiala <span> Freitas</span></h2>
-            <h3> Pinheiral, Rio de Janeiro - Brasil | <span> (24) 981322871 </span> | maiala_rodrigues@hotmail.com</h3>
-            <p> Olá eu me chamo Maiala, tenho 28 anos, moro na cidade de Pinheiral no interior do estado do Rio de Janeiro, 
+            <h3> Volta Redonda, Rio de Janeiro - Brasil | <span> (24) 981322871 </span> | maiala_rodrigues@hotmail.com</h3>
+            <p> Olá eu me chamo Maiala, tenho 28 anos, moro na cidade de Volta Redonda, região sul fluminense do estado do Rio de Janeiro, 
                 sou recém formada no curso de Licenciatura em computação pelo Instituto Federal do Rio de Janeiro - IFRJ, e estou em 
             busca do meu primeiro emprego na área de tecnologia </p>
 
